--- a/client/pom.xml
+++ b/client/pom.xml
@@ -69,6 +69,11 @@
             <artifactId>spring-security-config</artifactId>
             <version>5.6.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>1.4.2.Final</version>
+        </dependency>
 
     </dependencies>
 
